# bumba-open-harness

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RULES.md  SECURITY.md  SOUL.md  semgrep.yml
agent/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  OPERATOR.md  README-test.md  RULES.md  TOOLS.md  mypy-baseline.txt  pyproject.toml  resource-warning-baseline.txt  ruff.toml
agent/bridge/: __main__.py  _async_supervision.py  agent_lifecycle.py  agent_router.py  api_server.py  app.py  app_init.py  autonomy.py  background_loops.py  base_channel.py  board_run_store.py  branch_protection.py  browser_trace.py  budget.py  calcom_webhook.py  capability_manifest.py  chief_dispatcher.py  chief_session.py  chief_session_store.py  circuit_breaker.py  claude_runner.py  command_router.py  command_suggester.py  commands.py  compaction_checkpoint.py  compound_pressure.py  config.py  consolidation.py  consolidation_lock.py  context_pressure.py  conversation_log.py  cost_tracker.py  cron_jitter.py  daily_log.py  database.py  decomposer.py  departments.py  dependency_manager.py  deploy_manifest.py  diagnosis.py  (+156 more)
agent/bridge/advanced_memory/: __init__.py  destinations.py  dual_write.py
agent/bridge/api/: _helpers.py  directives_routes.py  routes_agents.py  routes_chief_sessions.py  routes_commands.py  routes_cost_trust.py  routes_dashboard.py  routes_events_knowledge.py  routes_health.py  routes_hitl.py  routes_job_search.py  routes_metrics.py  routes_reviews.py  routes_roster.py  routes_services.py  routes_tasks.py  routes_vapi_departments.py  routes_webhooks.py  routes_websocket.py  routes_workflows.py  routes_workorders.py  routes_zone4_reports.py
agent/bridge/backends/: __init__.py  _auth.py  _errors.py  _protocol.py  claude.py  codex.py  dispatch_guard.py  factory.py  http_base.py  one_shot.py  openrouter.py  registry.py
agent/bridge/command_handlers/: __init__.py  agents_and_memory.py  board_and_voice.py  cost_and_z4.py  departments.py  jobs_and_factory.py  lifecycle.py  skills_and_hooks.py  wiki.py
agent/bridge/cross_model/: __init__.py  agent_adapter.py  openrouter_adapter.py  openrouter_client.py
agent/bridge/db/: __init__.py  connection.py  migrations.py  queries.py
agent/bridge/executors/: __init__.py  base.py  department.py  e2b.py  (+3 more)
agent/config/: bridge.toml  claude-settings.json  disallowed-tools.txt  dispatcher.yaml  evidence.toml  experiment-program.md  feature_flags.yaml  handoff-template.md  litellm_config.yaml  mcp-servers.canonical.json  mcp-servers.template.json  quality-chain.yaml  second-brain-schema.md  skills.yaml  subagent-mcp-allowlist.toml  synthesizer.yaml  system-prompt.md  tool-registry.yaml  tool-risk-classifications.yaml  tool-shed.yaml  warm-core-mcp.json  zone-architecture-v2.md  zone4-model-allocation.yaml
agent/data/: .gitignore  .secrets-template
agent/job_search/: README.md  __init__.py  __main__.py  _pipeline.py  agent.py  approval.py  canary.py  candidate.json.example  contracts.py  cover_letter.py  credentials.py  criteria.json.example  criteria.py  deduplication.py  department.py  funnel.py  lint.py  models.py  notifier.py  outreach.py  preflight.py  quality_wiring.py  rubric.py  rubric_evidence.py  service.py  snapshot.py
agent/scripts/: _hook_runner.py  _loop_program.py  _scaffolding_templates.py  ab_harness_memory_assembly.py  audit_skill_frontmatter.py  audit_zone3_engineering.py  audit_zone4_capabilities.py  backfill_memory_tiers.py  build_sprint_dependency_graph.py  capture_browser_profile.py  check_canonical_source_territory.py  check_critical_metrics_drift.py  check_dependency_graph.py  check_feature_flags.py  check_mypy_baseline.py  check_readiness_docs.py  check_resource_warning_baseline.py  check_service_inventory_drift.py  check_telemetry_map.py  codex_e2e_smoke.py  codex_teams_smoke.py  com.bumba.agent-bridge.plist  com.bumba.agent-briefing.plist  com.bumba.agent-calendar.plist  com.bumba.agent-checkin.plist  com.bumba.agent-cost-rollup.plist  com.bumba.agent-email.plist  com.bumba.agent-funnel-post.plist  com.bumba.agent-inbox-nurture.plist  com.bumba.agent-job-execute.plist  com.bumba.agent-job-search.plist  com.bumba.agent-knowledge-review.plist  com.bumba.agent-maintenance.plist  com.bumba.agent-meeting-prebrief.plist  com.bumba.agent-monitor.plist  com.bumba.agent-project-pulse.plist  com.bumba.agent-retro.plist  com.bumba.agent-subscription-tracker.plist  com.bumba.agent-weekly-review.plist  com.bumba.deploy-helper.plist  (+62 more)
agent/teams/: __init__.py  _agent_cache.py  _circuit.py  _codex_model.py  _config.py  _executor.py  _factory.py  _governance.py  _handoff.py  _namespace.py  _openrouter_route_policy.py  _post_run.py  _providers.py  _readiness.py  _registry.py  _run_telemetry.py  _semaphore.py  _smoke_matrix.py  _team.py  _tool_registry.py  _types.py  _usage_policy.py  _vapi.py  _verify.py
agent/tests/: .migrate-stickiness.txt  conftest.py  test_442_board_prereview.py  test_advanced_memory.py  test_agent_lifecycle.py  test_agent_router.py  test_api_agents.py  test_api_cost.py  test_api_dashboard.py  test_api_escalation.py  test_api_halt_persistence.py  test_api_index.py  test_api_integration.py  test_api_server.py  test_api_server_extended.py  test_api_sessions.py  test_api_trust.py  test_api_websocket.py  test_api_workflows.py  test_app.py  test_app_env_selector_integration.py  test_app_init_backend_routing.py  test_app_startup.py  test_app_wiring_parity.py  test_app_workflow_runner_adapter.py  test_app_workflow_wiring.py  test_async_supervision.py  test_autonomy.py  test_autonomy_integration.py  test_backend_capability_guard.py  test_backend_dispatch_guard.py  test_backend_registry.py  test_backends_capabilities.py  test_backends_protocol.py  test_backfill_memory_tiers.py  test_background_loops.py  test_base_channel.py  test_blocking_io.py  test_board_feedback_loop.py  test_board_modalities.py  (+490 more)
agent/zone3/: claude_p_executor.py  engineering_artifacts.py  engineering_config.py  engineering_dispatcher.py  engineering_prompts.py
(+1412 files in other folders)
