[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Generated with Bumba Sandbox Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Developer", email = "dev@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "black>=24.1.0",
  "isort>=5.13.0",
  "mypy>=1.8.0",
  "ruff>=0.1.14",
]

[project.scripts]
{{PROJECT_NAME}} = "{{PROJECT_NAME}}:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{PROJECT_NAME}}"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing"
